tests/rosetta/transpiler/Python/ftp.error
run: exit status 1
  File "/workspace/mochi/tests/rosetta/transpiler/Python/ftp.py", line 48
    def login(conn, user, pass):
                          ^^^^
SyntaxError: invalid syntax
