tests/rosetta/transpiler/Python/ftp.bench
File "/workspace/mochi/tests/rosetta/transpiler/Python/ftp.py", line 51
    def login(conn, user, pass):
                          ^^^^
SyntaxError: invalid syntax